Fix: CSS, overflowing for Film Page

--- a/src/App.css
+++ b/src/App.css
@@ -344,6 +344,7 @@ li .active:before {
 }
 
 .film-card {
+  max-width: 700px;
   display: flex;
   justify-content: space-between;
 }
@@ -363,30 +364,28 @@ li .active:before {
 .film-img {
   max-width: 550px;
   width: 100%;
-  height: auto;
 }
 
 .video-big {
-  height: 100% !important;
-  width: 100% !important;
   aspect-ratio: 16/9;
 }
 
 .video-small {
-  height: 100% !important;
-  width: 100% !important;
   aspect-ratio: 16/9;
 }
 
 .film-title-section {
-  display: flex;
   width: 100%;
-  justify-content: space-between;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
 }
 
 .videos-section {
+  width: 100%;
   display: flex;
-  justify-content: space-between;
+  flex-direction: column;
+  justify-content: center;
   margin-top: 1rem;
   gap: 1rem;
 }
@@ -602,10 +601,6 @@ li .active:before {
     translate: -10px;
     margin: 0;
   }
-
-  .film-card section {
-    min-width: 200px;
-  }
 }
 
 @media (min-width:1000px) {
@@ -648,6 +643,39 @@ li .active:before {
     max-width: 50%;
     display: flex;
     flex-flow: column nowrap;
+  }
+
+  .film-img {
+    max-width: 550px;
+    width: 100%;
+    height: auto;
+  }
+
+  .video-big {
+    height: 100% !important;
+    width: 100% !important;
+    aspect-ratio: 16/9;
+  }
+
+  .video-small {
+    height: 100% !important;
+    width: 100% !important;
+    aspect-ratio: 16/9;
+  }
+
+  .film-title-section {
+    display: flex;
+    flex-direction: row;
+    width: 100%;
+    justify-content: space-between;
+  }
+
+  .videos-section {
+    flex-direction: row;
+  }
+
+  .film-card section {
+    min-width: 200px;
   }
 }
 
